# Calculator_NX

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  build.sh  clean.sh  meson.build
.github/workflows/: main.yml
borealis/: .gitrepo
cnx_forwarder/: Makefile
cnx_forwarder/source/: main.cpp
core/include/: app.hpp  calculator.hpp  constants.hpp  download.hpp  main.hpp  utils.hpp
core/source/: app.cpp  calculator.cpp  constants.cpp  download.cpp  main.cpp  utils.cpp
gui/include/: aboutTab.hpp  calculatorTab.hpp  gui_app.hpp  mainActivity.hpp  switchToGUI.hpp  updateActivity.hpp  updaterTab.hpp
gui/source/: aboutTab.cpp  calculatorTab.cpp  gui_app.cpp  main.cpp  mainActivity.cpp  switchToGUI.cpp  updateActivity.cpp  updaterTab.cpp
include/: aboutTab.hpp  calculator.hpp  calculatorTab.hpp  config.hpp  constants.hpp  download.hpp  fs.hpp  mainActivity.hpp  shouldQuit.hpp  updaterTab.hpp
include/common/: calculator.hpp  singleton.hpp
lib/: .gitrepo
lib/borealis/: .gitrepo
lib/nxdumptool/: http.cpp  http.hpp
overlay/: Makefile
overlay/include/: Button.hpp  CalculatorElement.hpp
overlay/source/: Button.cpp  CalculatorElement.cpp  main.cpp
resources/: .gitignore  calculator.xml  main.xml
resources/activity/: main.xml
resources/tabs/: about.xml  calculator.xml
source/: aboutTab.cpp  calculator.cpp  calculator.hpp  calculatorTab.cpp  download.cpp  fs.cpp  gui.hpp  main.cpp  mainActivity.cpp  shouldQuit.cpp  updaterTab.cpp
source/common/: calculator.cpp
src/: main.cpp
src/core/: calculator.cpp  calculator.hpp
(+23 files in other folders)
